--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Café Las Horas</title>
 </head>
 <body>
+
+    <header>
+
+        <h1>Café Las Horas</h1>
+        <h2>Comunidad de Café. Gastrobar y tapas</h2>
+        <h2>Domingo desgustación de Café</h2>
+
+    </header>
+
+    <main>
+
+        <section>
+
+        </section>
+
+    </main>
     
 </body>
 </html>
